--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,6 @@ body {
   background-color: white;
   border-bottom-left-radius: 100px;
   padding-bottom: 100px;
-
-  /* padding-left: 50px; */
 }
 
 .top-section {
@@ -27,11 +25,10 @@ body {
   background-image: url("/assets/images/headerBackground.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  padding-top: 164px;
+  padding-top: 320px;
 }
 
 .second-section {
-  /* margin-top: 314px; */
   max-width: 795px;
   margin: auto;
 }
@@ -45,8 +42,6 @@ body {
   margin: 0 155px;
   justify-content: space-between;
   margin-top: 0;
-
-  /* border: 1px solid red; */
 }
 
 .nav-bar ul {
@@ -59,21 +54,89 @@ body {
   padding: 0;
 }
 
+.logo-box li {
+  color: #6070ff;
+  font-size: 18px;
+}
+
 .links-box {
   display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  min-width: 200px;
+  padding: 0;
 }
 
 .links-box li {
-  margin-left: 32px;
+  font-size: 15px;
 }
 
 .social-container {
   list-style-type: none;
   padding: 0;
   display: flex;
-  padding-bottom: 150px;
+  padding-bottom: 250px;
 }
 
 .social-container li {
   margin-right: 19px;
+}
+
+@media screen and (max-width: 1000px) {
+  .second-section {
+    max-width: 600px;
+    margin: auto;
+  }
+
+  .second-section-container {
+    padding-top: 144px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .second-section-container {
+    background-image: url("/assets/images/headerBackground.png");
+    background-size: 100% 80%;
+    background-repeat: no-repeat;
+    padding-top: 124px;
+  }
+
+  .nav-bar {
+    margin: 0 54px;
+  }
+
+  .second-section {
+    max-width: 400px;
+  }
+
+  .social-container {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .nav-bar {
+    margin: 0 20px;
+  }
+
+  .links-box {
+    display: none;
+  }
+
+  .menu-box {
+    display: block;
+    /* color: black; */
+
+    color: #6070ff;
+    height: 10px;
+  }
+
+  .second-section {
+    max-width: 372px;
+    margin: 0 20px;
+  }
+
+  .second-section-container {
+    /* padding-top: 128px; */
+  }
 }
