--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ section {
 }
 
 .second-section-container {
-  background-image: url("/assets/images/mobileBackground.png");
+  background-image: url("./assets/images/mobileBackground.png");
   background-size: 100% 100%;
 }
 
