--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,10 @@ body {
 
 .wrapper {
   display: flex;
+  flex-direction: column;
   width: 375px;
-  height: 718px;
   margin: auto;
-  background-color: white;
-  border-bottom-left-radius: 50px;
+  background-color: #f7f7f9;
   padding: 0;
 }
 
@@ -66,6 +65,7 @@ section {
   background-image: url("./assets/images/mobileBackground.png");
   background-size: 100% 100%;
   width: 60%;
+  border-bottom-left-radius: 150px;
 }
 
 .second-section p {
@@ -88,6 +88,11 @@ section {
 .header,
 .second-section-container {
   width: 100%;
+  background-color: white;
+}
+
+.header {
+  border-bottom-left-radius: 100px;
 }
 
 .connect {
@@ -118,4 +123,112 @@ section {
   margin-right: 19px;
   font-size: 18px;
   width: 20px;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 50px;
+  width: 100%;
+  margin: auto;
+}
+
+.project {
+  margin: 80px 24px 0;
+  border: 1px solid #dfe1e6;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 27px;
+  border-radius: 16px;
+  background-color: white;
+}
+
+.project > * {
+  margin: 0 16px;
+}
+
+.project img {
+  margin-top: 16px;
+}
+
+.project-image {
+  margin: auto;
+}
+
+.project-name {
+  font-family: "Poppins", sans-serif;
+  font-size: 32px;
+  font-weight: bolder;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 70%;
+  color: #172b4d;
+}
+
+.project-year {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+}
+
+.canopy {
+  font-size: 13px;
+  font-family: "Poppins", sans-serif;
+  font-weight: bolder;
+  color: #344563;
+}
+
+.role {
+  font-size: 13px;
+  font-family: "Poppins", sans-serif;
+  color: #7a869a;
+  font-weight: bolder;
+}
+
+.dot {
+  background-color: #c1c7d0;
+  width: 5px;
+  height: 5px;
+  border-radius: 100%;
+  position: relative;
+  bottom: -7px;
+}
+
+.project-description {
+  line-height: 25px;
+  font-family: "Poppins", sans-serif;
+  color: #344563;
+}
+
+.project-technologies {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px 0 25px;
+}
+
+.project-technologies > * {
+  margin-right: 10px;
+  border-radius: 8px;
+  background-color: #ebebff;
+  padding: 5px 10px;
+  color: #6070ff;
+  font-size: 12px;
+  font-family: "Poppins", sans-serif;
+}
+
+.project-button {
+  width: 130px;
+  height: 48px;
+  background-color: white;
+  border: 2px solid #6070ff;
+  border-radius: 8px;
+  font-size: 17px;
+  font-family: "Poppins", sans-serif;
+  color: #396df2;
+  font-weight: 500;
+}
+
+.project-button:link {
+  background-color: white;
 }
