Add Works section

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: #e5e5e5;
-  margin: 0;
+  margin: 50px 0;
   padding: 0;
 }
 
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   width: 375px;
   margin: auto;
-  background-color: #f7f7f9;
+  background-color: #ededf5;
   padding: 0;
 }
 
@@ -81,8 +81,9 @@ section {
 .second-section p:first-child,
 .second-section p:nth-child(2) {
   font-size: 40px;
-  font-weight: 700;
-  width: 100%;
+  font-weight: bolder;
+  width: 90%;
+  color: #172b4d;
 }
 
 .header,
@@ -93,6 +94,7 @@ section {
 
 .header {
   border-bottom-left-radius: 100px;
+  font-family: "Poppins", sans-serif;
 }
 
 .connect {
@@ -115,14 +117,15 @@ section {
 }
 
 .second-section p:nth-child(3) {
+  color: #344563;
   margin-top: 12px;
-  width: 90%;
 }
 
 .social-container li {
-  margin-right: 19px;
-  font-size: 18px;
+  margin-right: 20px;
+  font-size: 25px;
   width: 20px;
+  color: #505f79;
 }
 
 .projects {
@@ -141,6 +144,7 @@ section {
   padding-bottom: 27px;
   border-radius: 16px;
   background-color: white;
+  font-family: "Poppins", sans-serif;
 }
 
 .project > * {
@@ -156,7 +160,6 @@ section {
 }
 
 .project-name {
-  font-family: "Poppins", sans-serif;
   font-size: 32px;
   font-weight: bolder;
   margin-top: 10px;
@@ -174,14 +177,12 @@ section {
 
 .canopy {
   font-size: 13px;
-  font-family: "Poppins", sans-serif;
   font-weight: bolder;
   color: #344563;
 }
 
 .role {
   font-size: 13px;
-  font-family: "Poppins", sans-serif;
   color: #7a869a;
   font-weight: bolder;
 }
@@ -197,7 +198,6 @@ section {
 
 .project-description {
   line-height: 25px;
-  font-family: "Poppins", sans-serif;
   color: #344563;
 }
 
@@ -214,7 +214,6 @@ section {
   padding: 5px 10px;
   color: #6070ff;
   font-size: 12px;
-  font-family: "Poppins", sans-serif;
 }
 
 .project-button {
@@ -224,11 +223,202 @@ section {
   border: 2px solid #6070ff;
   border-radius: 8px;
   font-size: 17px;
-  font-family: "Poppins", sans-serif;
   color: #396df2;
+  font-weight: 500;
+}
+
+.project-button:hover {
+  background-color: #6070ff;
+  border: 2px solid #6070ff;
+  border-radius: 8px;
+  font-size: 17px;
+  color: #fff;
+  font-weight: 500;
+}
+
+.project-button:active {
+  background-color: #2230d2;
+  border: 2px solid #2230d2;
+  border-radius: 8px;
+  font-size: 17px;
+  color: #fff;
   font-weight: 500;
 }
 
 .project-button:link {
   background-color: white;
+}
+
+.about {
+  background-color: #fff;
+  margin-top: 114px;
+  border-top-right-radius: 100px;
+  padding: 0 24px;
+  font-family: "Poppins", sans-serif;
+}
+
+.about > * {
+  width: 100%;
+}
+
+.about-intro-section p:first-child {
+  color: #172b4d;
+  font-size: 40px;
+  font-weight: bolder;
+  margin-bottom: 0;
+}
+
+.connect-about {
+  color: #7f8cff;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.about-intro-section p:nth-child(2) {
+  color: #344563;
+  padding-top: 0;
+  margin-top: 0;
+}
+
+.social-container-about {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  margin: 26px 0 20px;
+  padding: 0 0 0 12px;
+}
+
+.social-container-about li {
+  margin-right: 20px;
+  font-size: 25px;
+  width: 20px;
+  color: #505f79;
+}
+
+.about .project-button {
+  width: auto;
+  padding-right: 12px;
+  padding-left: 12px;
+  font-size: 17px;
+}
+
+.lang-and-icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  margin-top: 50px;
+  margin-bottom: 36px;
+}
+
+.lang-and-icon span:first-child {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.fa-chevron-down,
+.fa-chevron-right {
+  color: #505f79;
+}
+
+.langs-frames-skills {
+  margin: 0 15px;
+  width: 90%;
+}
+
+.lang-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.lang {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 0 10.72px;
+  padding: 10px;
+  background-color: #f7f7f9;
+}
+
+.lang-logo {
+  width: 48px;
+  height: 48px;
+  margin-right: 16px;
+}
+
+.frames-and-icon,
+.skills-and-icon {
+  border-bottom: 1px solid #dfe1e6;
+  padding-left: 12px;
+  padding-right: 42px;
+  width: 80%;
+  padding-bottom: 23px;
+}
+
+.contact-wrapper {
+  background-color: #6070ff;
+  padding: 21px 0 0;
+  border-top-left-radius: 70px;
+  margin-top: 63px;
+}
+
+.contact {
+  background: url("./assets/images/contact_background.png");
+  background-size: 60% 100%;
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-color: #6070ff;
+  font-family: "Poppins", sans-serif;
+  border-top-left-radius: 100px;
+  width: 100%;
+  padding: 13px 24px 0;
+  box-sizing: border-box;
+}
+
+.contact p:first-child {
+  text-align: center;
+  font-weight: bold;
+  font-size: 40px;
+  margin-bottom: 0;
+  color: #fff;
+}
+
+.contact p:first-of-type {
+  color: #ebebff;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.name,
+.email {
+  width: 100%;
+  height: 48px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  border: none;
+  padding: 15px;
+  font-size: 17px;
+  color: #172b4d;
+  box-sizing: border-box;
+}
+
+.msg {
+  width: 100%;
+  padding: 16px;
+  box-sizing: border-box;
+  border-radius: 8px;
+  margin-bottom: 22px;
+  color: #b3bac5;
+}
+
+.send {
+  color: #6070ff;
+  width: 140px;
+  height: 48px;
+  font-size: 17px;
+  border-radius: 8px;
+  margin-bottom: 32px;
+  border: none;
 }
