--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   width: 375px;
   margin: auto;
-  background-color: #ededf5;
+  background-color: #f8f7f7;
   padding: 0;
 }
 
@@ -31,6 +31,10 @@ body {
   margin: 0;
   font-size: 18px;
   font-weight: 700;
+}
+
+button {
+  cursor: pointer;
 }
 
 section {
@@ -163,16 +167,18 @@ section {
   font-size: 32px;
   font-weight: bolder;
   margin-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   width: 70%;
   color: #172b4d;
 }
 
 .project-year {
-  margin-bottom: 20px;
+  margin-bottom: 0;
   display: flex;
   justify-content: space-between;
   width: 70%;
+  list-style-type: none;
+  padding: 0;
 }
 
 .canopy {
@@ -197,14 +203,16 @@ section {
 }
 
 .project-description {
-  line-height: 25px;
+  /* line-height: 25px; */
   color: #344563;
+  margin-bottom: -15px;
 }
 
 .project-technologies {
   display: flex;
   flex-wrap: wrap;
   padding: 20px 0 25px;
+  list-style-type: none;
 }
 
 .project-technologies > * {
@@ -255,6 +263,7 @@ section {
   border-top-right-radius: 100px;
   padding: 0 24px;
   font-family: "Poppins", sans-serif;
+  /* font-weight: 900; */
 }
 
 .about > * {
@@ -264,8 +273,10 @@ section {
 .about-intro-section p:first-child {
   color: #172b4d;
   font-size: 40px;
-  font-weight: bolder;
-  margin-bottom: 0;
+  font-weight: 900;
+  margin-top: 92px;
+  margin-bottom: 10px;
+  line-height: 1.2;
 }
 
 .connect-about {
@@ -306,6 +317,7 @@ section {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  padding-bottom: 150px;
 }
 
 .lang-and-icon {
@@ -329,8 +341,9 @@ section {
 }
 
 .langs-frames-skills {
-  margin: 0 15px;
+  margin: 0 15px -30px;
   width: 90%;
+  padding-bottom: 0;
 }
 
 .lang-list {
@@ -345,6 +358,13 @@ section {
   margin: 0 0 10.72px;
   padding: 10px;
   background-color: #f7f7f9;
+  border-radius: 8px;
+}
+
+.js,
+.html,
+.css {
+  color: #253858;
 }
 
 .lang-logo {
@@ -366,7 +386,7 @@ section {
   background-color: #6070ff;
   padding: 21px 0 0;
   border-top-left-radius: 70px;
-  margin-top: 63px;
+  margin-top: -60px;
 }
 
 .contact {
@@ -392,9 +412,17 @@ section {
 
 .contact p:first-of-type {
   color: #ebebff;
-  font-size: 20px;
+  font-size: 40px;
   text-align: center;
-  margin-top: 10px;
+  font-weight: bold;
+  margin-top: 80px;
+}
+
+.contact p:nth-child(2) {
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 40px;
 }
 
 .name,
