--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 body {
   background-color: #e5e5e5;
-  margin: 50px 0;
   padding: 0;
+  margin: 0;
 }
 
+/* "Mobile First" Styling */
 .wrapper {
   display: flex;
   flex-direction: column;
-  width: 375px;
+  max-width: 1024px;
   margin: auto;
   background-color: #f8f7f7;
   padding: 0;
@@ -51,10 +52,6 @@ section {
   width: 90%;
 }
 
-.logo-box {
-  width: 80%;
-}
-
 .logo-box a {
   text-decoration: none;
   color: #6070ff;
@@ -67,7 +64,8 @@ section {
 
 .second-section-container {
   background-image: url("./assets/images/mobileBackground.png");
-  background-size: 100% 100%;
+  background-size: 100% 90%;
+  background-repeat: no-repeat;
   width: 60%;
   border-bottom-left-radius: 150px;
 }
@@ -161,6 +159,7 @@ section {
 
 .project-image {
   margin: auto;
+  margin: 0 10px;
 }
 
 .project-name {
@@ -175,10 +174,12 @@ section {
 .project-year {
   margin-bottom: 0;
   display: flex;
-  justify-content: space-between;
-  width: 70%;
   list-style-type: none;
   padding: 0;
+}
+
+.project-year > * {
+  margin-right: 5px;
 }
 
 .canopy {
@@ -315,7 +316,7 @@ section {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  padding-bottom: 150px;
+  padding-bottom: 350px;
 }
 
 .lang-and-icon {
@@ -347,6 +348,10 @@ section {
 .lang-list {
   display: flex;
   flex-direction: column;
+}
+
+.second-section ul {
+  margin-bottom: 80px;
 }
 
 .lang {
@@ -384,7 +389,7 @@ section {
   background-color: #6070ff;
   padding: 21px 0 0;
   border-top-left-radius: 70px;
-  margin-top: -60px;
+  margin-top: -180px;
 }
 
 .contact {
@@ -431,7 +436,7 @@ section {
   border-radius: 8px;
   border: none;
   padding: 15px;
-  font-size: 17px;
+  font-size: 20px;
   color: #172b4d;
   box-sizing: border-box;
 }
@@ -444,6 +449,7 @@ section {
   margin-bottom: 22px;
   color: black;
   font-family: Poppins, sans-serif;
+  font-size: 20px;
 }
 
 .send {
@@ -458,4 +464,163 @@ section {
 
 .send:hover {
   border: 1px solid white;
+}
+
+.menu {
+  display: none;
+}
+
+.image {
+  width: 100%;
+}
+
+/* Desktop media queries */
+@media all and (min-width: 1020px) {
+  .wrapper {
+    min-width: 100%;
+  }
+
+  .menu-icon {
+    display: none;
+  }
+
+  .menu {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    justify-content: space-between;
+  }
+
+  .nav-bar {
+    max-width: 80%;
+    color: #344563;
+    margin: 10px auto 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-bar li {
+    margin-left: 90px;
+  }
+
+  .top-section {
+    width: 100%;
+    padding: 0;
+  }
+
+  .second-section-container {
+    background-image: url("./assets/images/headerBackground.png");
+    margin: 0 auto;
+    display: flex;
+    align-self: center;
+    width: 95%;
+  }
+
+  .second-section {
+    width: 70%;
+    margin: auto;
+  }
+
+  .second-section p:first-child {
+    padding-top: 80px;
+  }
+
+  /* Project section styling */
+  .project {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    width: 60%;
+    margin: 100px auto 0;
+    padding: 10px;
+  }
+
+  .project:hover {
+    cursor: pointer;
+    border: 1px solid #a7afff;
+    box-shadow: 10px 20px 60px 5px rgba(197, 201, 250, 0.8);
+  }
+
+  .project-image {
+    width: 100%;
+    display: flex;
+    margin: 0;
+  }
+
+  .project .image {
+    padding-top: 0;
+    margin-top: 0;
+  }
+
+  .project2 .project-image,
+  .project4 .project-image {
+    order: 2;
+  }
+
+  .second-section p:first-child,
+  .second-section p:nth-child(2) {
+    font-size: 48px;
+  }
+
+  .second-section .connect {
+    padding-top: 20px;
+  }
+
+  .about {
+    display: grid;
+    grid-template-columns: 35% 65%;
+    padding: 0 190px;
+  }
+
+  .lang {
+    width: 100px;
+    flex-direction: column;
+    margin-right: 10px;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 80px;
+    padding-left: 5px;
+  }
+
+  .lang-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .css {
+    margin-left: 5px;
+  }
+
+  .tech-stacks {
+    margin: 50px 0 0 10px;
+  }
+
+  .contact {
+    background-image: url("./assets/images/contact_form_big_background.png");
+    background-size: 100% 100%;
+    text-align: center;
+    padding-bottom: 50px;
+    border-top-left-radius: 400px;
+  }
+
+  .contact-wrapper {
+    border-top-left-radius: 200px;
+  }
+
+  .contact p:first-child {
+    padding-bottom: 30px;
+  }
+
+  .contact > * {
+    max-width: 400px;
+    margin: auto;
+  }
+
+  .send {
+    align-self: center;
+  }
+
+  .project > section:nth-child(2) {
+    margin: 20px 0 0 20px;
+  }
 }
