--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ body {
 .nav-bar p {
   padding: 0;
   margin: 0;
-  font-size: 18px;
   font-weight: 700;
 }
 
@@ -49,7 +48,8 @@ section {
 }
 
 .top-section {
-  width: 90%;
+  width: 95%;
+  margin: auto;
 }
 
 .logo-box a {
@@ -130,6 +130,11 @@ section {
   color: #505f79;
 }
 
+.social-container li a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .projects {
   display: grid;
   grid-template-columns: 100%;
@@ -154,7 +159,7 @@ section {
 }
 
 .project img {
-  margin-top: 16px;
+  margin-top: 10px;
 }
 
 .project-image {
@@ -276,6 +281,7 @@ section {
   margin-top: 92px;
   margin-bottom: 10px;
   line-height: 1.2;
+  width: 150px;
 }
 
 .connect-about {
@@ -498,10 +504,16 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 20px;
   }
 
   .nav-bar li {
-    margin-left: 90px;
+    margin-left: 50px;
+  }
+
+  .nav-bar li a {
+    text-decoration: none;
+    color: inherit;
   }
 
   .top-section {
@@ -530,9 +542,11 @@ section {
   .project {
     display: grid;
     grid-template-columns: 50% 50%;
+    column-gap: 10px;
     width: 75%;
     margin: 100px auto 0;
-    padding: 10px;
+    padding: 10px 20px 10px 10px;
+    box-sizing: border-box;
   }
 
   .project:hover {
@@ -570,6 +584,10 @@ section {
     display: grid;
     grid-template-columns: 40% 60%;
     padding: 0 190px;
+  }
+
+  .about-intro-section p:nth-child(2) {
+    font-size: 18px;
   }
 
   .lang {
