--- a/styles.css
+++ b/styles.css
@@ -446,6 +446,13 @@ section {
   font-size: 20px;
   color: #172b4d;
   box-sizing: border-box;
+  transition: all 0.5s;
+}
+
+.name:focus,
+.email:focus,
+.msg:focus {
+  transform: scale(1.05);
 }
 
 .msg {
@@ -457,6 +464,7 @@ section {
   color: black;
   font-family: Poppins, sans-serif;
   font-size: 20px;
+  transition: all 0.5s;
 }
 
 .send {
