--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,32 @@ section {
   font-family: "Poppins", sans-serif;
 }
 
+/* Syles for the mobile menu */
+.mobile-menu-format {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  opacity: 0.95;
+  padding-top: 21px;
+  width: 100vw;
+  height: 100vh;
+  background-color: #6070ff;
+}
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
+
+.mobile-menu-format .menu-item {
+  padding-left: 28px;
+  margin-bottom: 40px;
+  font-size: 32px;
+}
+
 .connect {
   color: #7f8cff;
   font-size: 1rem;
