--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ section {
 
 .modal-buttons button {
   background-color: white;
-  border: 0.5px solid rgb(52, 59, 155);
+  border: 0.5px solid  rgb(52, 59, 155);
   padding: 10px;
   border-radius: 8px;
   font-size: 18px;
@@ -225,6 +225,52 @@ section {
   text-decoration: none;
   color: rgb(52, 59, 155);
 }
+
+/* Syles for the mobile menu */
+.mobile-menu-format {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  opacity: 0.95;
+  padding-top: 21px;
+  width: 100vw;
+  height: 100vh;
+  background-color: #6070ff;
+}
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
+
+.mobile-menu-format .menu-item {
+  padding-left: 28px;
+  margin-bottom: 40px;
+  font-size: 32px;
+}
+
+.mobile-menu-format li:first-of-type {
+  padding-top: 60px;
+}
+
+.close-container {
+  display: flex;
+  justify-content: flex-end;
+  color: white;
+  font-size: 30px;
+  padding-right: 33px;
+}
+
+.mobile-menu-format .menu-item a {
+  color: white;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+}
+
+/* End of Mobile Menu Styles */
 
 .connect {
   color: #7f8cff;
@@ -765,4 +811,6 @@ section {
   .project > section:nth-child(2) {
     margin: 20px 0 0 20px;
   }
+
+  
 }
