--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,18 @@ body {
 }
 
 .nav-bar {
-  margin: 26px 24px 20px;
   color: #6070ff;
   display: flex;
   font-weight: 700;
   justify-content: space-between;
   font-family: "Roboto", sans-serif;
+  background-color: white;
+  padding: 20px 8.5% 0;
+  margin: 0;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .nav-bar h1 {
@@ -131,6 +137,7 @@ section {
   background: rgba(138, 168, 207, 0.84);
   opacity: unset;
   text-align: center;
+  z-index: 20;
   max-height: 100vh;
   overflow-y: auto;
   backdrop-filter: blur(4px);
@@ -237,11 +244,11 @@ section {
   left: 0;
   margin: 0;
   padding: 0;
-  opacity: 0.95;
   padding-top: 21px;
   width: 100vw;
   height: 100vh;
-  background-color: #6070ff;
+  background-color: #6070ffc0;
+  backdrop-filter: blur(6px);
 }
 
 .stop-scrolling {
@@ -403,7 +410,7 @@ section {
   font-size: 1.06rem;
   color: #396df2;
   font-weight: 500;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 
 .project-button:hover {
@@ -603,7 +610,7 @@ section {
   font-size: 1.25rem;
   color: #172b4d;
   box-sizing: border-box;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 
 .msg {
@@ -615,7 +622,7 @@ section {
   color: black;
   font-family: Poppins, sans-serif;
   font-size: 1.25rem;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 
 .name:focus,
@@ -644,7 +651,7 @@ section {
 
 .image {
   width: 100%;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 
 .image:hover {
@@ -669,13 +676,17 @@ section {
   }
 
   .nav-bar {
-    max-width: 80%;
+    /* width: 100%; */
     color: #344563;
-    margin: 10px auto 50px;
+    background-color: white;
+    padding: 0 6%;
+    margin: 0;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-around; */
     align-items: center;
     font-size: 1.25rem;
+    position: sticky;
+    top: 0;
   }
 
   .nav-bar li {
