--- a/css/styles.css
+++ b/css/styles.css
@@ -776,7 +776,8 @@ section {
   .about {
     display: grid;
     grid-template-columns: 40% 60%;
-    padding: 0 100px;
+    grid-gap: 10px;
+    padding: 0 10%;
   }
 
   .about-intro-section p:nth-child(2) {
@@ -793,10 +794,35 @@ section {
     padding-left: 5px;
   }
 
+  .lang-and-icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 36px;
+    width: auto;
+  }
+
+  .frames-and-icon,
+  .skills-and-icon {
+    border-bottom: 1px solid #dfe1e6;
+    padding-left: 0;
+    padding-right: 0;
+    width: auto;
+    padding-bottom: 23px;
+  }
+
   .lang-list {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
+  }
+
+  .langs-frames-skills {
+    margin: 0;
+    width: auto;
+    padding-bottom: 0;
   }
 
   .css {
