--- a/css/styles.css
+++ b/css/styles.css
@@ -344,12 +344,17 @@ section {
 
 .project img {
   margin-top: 10px;
+  min-height: 300px;
 }
 
 .project-image {
   margin: auto;
   margin: 0 10px;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  border-radius: 10px;
+  margin-top: 10px;
+  max-height: 500px;
 }
 
 .project-name {
@@ -663,6 +668,9 @@ section {
 
 .image {
   width: 100%;
+  height: 100%;
+  margin-top: 0;
+  border-radius: 10px;
   transition: all 1s;
 }
 
@@ -752,6 +760,7 @@ section {
     margin: 0;
     border-radius: 16px;
     overflow: hidden;
+    max-height: 800px;
   }
 
   .project .image {
@@ -759,8 +768,7 @@ section {
     margin-top: 0;
   }
 
-  .project2 .project-image,
-  .project4 .project-image {
+  .exchange {
     order: 2;
   }
 
