--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,7 @@ section {
 .modal-image {
   width: 100%;
   margin-top: 20px;
+  border-radius: 10px;
 }
 
 .modal-project-details {
@@ -342,19 +343,15 @@ section {
   margin: 0 16px;
 }
 
-.project img {
-  margin-top: 10px;
-  min-height: 300px;
-}
-
 .project-image {
   margin: auto;
   margin: 0 10px;
+  display: block;
   overflow-y: hidden;
   overflow-x: hidden;
   border-radius: 10px;
   margin-top: 10px;
-  max-height: 500px;
+  height: auto;
 }
 
 .project-name {
@@ -411,7 +408,7 @@ section {
 }
 
 .project-technologies > * {
-  margin-right: 10px;
+  margin: 0 5px 5px;
   border-radius: 8px;
   background-color: #ebebff;
   padding: 5px 10px;
@@ -668,7 +665,7 @@ section {
 
 .image {
   width: 100%;
-  height: 100%;
+  height: auto;
   margin-top: 0;
   border-radius: 10px;
   transition: all 1s;
@@ -756,16 +753,17 @@ section {
 
   .project-image {
     width: 100%;
-    display: flex;
+    height: auto;
     margin: 0;
     border-radius: 16px;
     overflow: hidden;
-    max-height: 800px;
   }
 
   .project .image {
     padding-top: 0;
     margin-top: 0;
+    width: 100%;
+    height: auto;
   }
 
   .exchange {
@@ -889,6 +887,7 @@ section {
 
   .modal-image {
     margin-top: 0;
+    border-radius: 10px;
   }
 
   .modal-techs {
