--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ body {
   border-radius: 100%;
   width: 300px;
   margin-top: 180px;
+  margin-bottom: 90px;
   opacity: 0.8;
   right: 0;
   bottom: 180px;
@@ -104,6 +105,10 @@ section {
   width: 90%;
   color: #172b4d;
   margin: 0;
+}
+
+.second-section h1:first-child {
+  margin-top: 10px;
 }
 
 .header,
@@ -514,7 +519,7 @@ section {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
 }
 
 .lang-and-icon {
@@ -522,9 +527,8 @@ section {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
-  margin-top: 50px;
-  margin-bottom: 36px;
+  margin-top: 60px;
+  margin-bottom: 10px;
 }
 
 .lang-and-icon span:first-child {
@@ -546,6 +550,20 @@ section {
 .lang-list {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+  transition: height 1s;
+}
+
+.lang-height {
+  height: 620px;
+}
+
+.frame-height {
+  height: 400px;
+}
+
+.skill-height {
+  height: 600px;
 }
 
 .second-section ul {
@@ -685,6 +703,10 @@ section {
   transform: scale(1.1);
 }
 
+.toggle-lang-list {
+  height: 0;
+}
+
 /* Desktop media queries */
 @media all and (min-width: 1020px) {
   .wrapper {
@@ -807,7 +829,6 @@ section {
     margin-right: 10px;
     justify-content: space-between;
     align-items: flex-start;
-    height: 80px;
     padding-left: 5px;
   }
 
@@ -816,8 +837,8 @@ section {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 36px;
+    margin-top: 40px;
+    margin-bottom: 20px;
     width: auto;
   }
 
@@ -834,7 +855,10 @@ section {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
+    /* height: 200px; */
   }
+  
+  
 
   .langs-frames-skills {
     margin: 0;
@@ -856,6 +880,7 @@ section {
     text-align: center;
     padding-bottom: 50px;
     border-top-left-radius: 200px;
+    margin-top: 200px;
   }
 
   .contact-wrapper {
