--- a/css/styles.css
+++ b/css/styles.css
@@ -519,7 +519,7 @@ section {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  padding-bottom: 100px;
+  padding-bottom: 20px;
 }
 
 .lang-and-icon {
@@ -536,9 +536,14 @@ section {
   font-weight: 500;
 }
 
-.fa-chevron-down,
-.fa-chevron-right {
+.fa-chevron-down {
   color: #505f79;
+  transform: rotate(180deg);
+  transition: all 1s;
+}
+
+.rotate-chevron {
+  transform: rotate(360deg);
 }
 
 .langs-frames-skills {
@@ -550,20 +555,6 @@ section {
 .lang-list {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
-  transition: height 1s;
-}
-
-.lang-height {
-  height: 620px;
-}
-
-.frame-height {
-  height: 400px;
-}
-
-.skill-height {
-  height: 600px;
 }
 
 .second-section ul {
@@ -616,6 +607,7 @@ section {
   width: 100%;
   padding: 13px 24px 0;
   box-sizing: border-box;
+  margin-top: 100px;
 }
 
 .contact h1:first-child {
@@ -704,7 +696,7 @@ section {
 }
 
 .toggle-lang-list {
-  height: 0;
+  display: none;
 }
 
 /* Desktop media queries */
@@ -855,10 +847,7 @@ section {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    /* height: 200px; */
   }
-  
-  
 
   .langs-frames-skills {
     margin: 0;
