--- a/css/styles.css
+++ b/css/styles.css
@@ -599,7 +599,7 @@ section {
 .lang-logo {
   width: 48px;
   height: 48px;
-  margin-right: 16px;
+  margin-right: 20px;
 }
 
 .frames-and-icon,
@@ -862,7 +862,7 @@ section {
     flex-direction: column;
     margin-right: 10px;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     padding-left: 5px;
   }
 
